--- a/app/src/main/res/layout/activity_add.xml
+++ b/app/src/main/res/layout/activity_add.xml
@@ -72,7 +72,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
         android:onClick="onButtonClicked"
-        android:text="Convert for checking"
+        android:text="Check coordinates"
         app:layout_constraintEnd_toEndOf="@+id/radioLocation"
         app:layout_constraintHorizontal_bias="0.504"
         app:layout_constraintStart_toEndOf="@+id/radioLocation"
@@ -90,8 +90,10 @@
         android:id="@+id/progressBar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="32dp"
         android:visibility="invisible"
         app:layout_constraintEnd_toEndOf="@+id/actionButton"
+        app:layout_constraintHorizontal_bias="0.494"
         app:layout_constraintStart_toStartOf="@+id/actionButton"
         app:layout_constraintTop_toTopOf="@+id/infoText" />
 
@@ -109,11 +111,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Submit location"
+        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/actionButton"
-        app:layout_constraintVertical_bias="0.081" />
+        app:layout_constraintTop_toBottomOf="@+id/infoText"
+        app:layout_constraintVertical_bias="0.279" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
