Tahmin - Created a Donate Page

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="login">#E34A4A</color>
     <color name="red">#FF0000</color>
-    <color name="purple_700">#FF3700B3</color>
+    <color name="purple_700">@color/black</color>
     <color name="teal_200">#FF03DAC5</color>
     <color name="grey">#EFEFEF</color>
     <color name="black">#FF000000</color>
