Authentication and Login

--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -141,4 +141,12 @@
         android:textSize="8sp"
         app:layout_constraintEnd_toEndOf="@+id/btn_register"
         app:layout_constraintTop_toBottomOf="@+id/btn_register" />
+
+    <ImageView
+        android:id="@+id/iv_picture"
+        android:layout_width="90dp"
+        android:layout_height="94dp"
+        tools:layout_editor_absoluteX="160dp"
+        tools:layout_editor_absoluteY="134dp"
+        tools:srcCompat="@tools:sample/avatars" />
 </androidx.constraintlayout.widget.ConstraintLayout>
