--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -133,4 +133,15 @@
         app:layout_constraintStart_toEndOf="@+id/tv_msg"
         app:layout_constraintTop_toBottomOf="@+id/btn_login" />
 
+    <ImageView
+        android:id="@+id/iv_loginPhoto"
+        android:layout_width="70dp"
+        android:layout_height="62dp"
+        android:layout_marginBottom="48dp"
+        app:layout_constraintBottom_toTopOf="@+id/tv_email"
+        app:layout_constraintEnd_toEndOf="@+id/tv_email"
+        app:layout_constraintHorizontal_bias="0.513"
+        app:layout_constraintStart_toEndOf="@+id/tv_welcome"
+        tools:srcCompat="@tools:sample/avatars" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
