--- a/app/src/main/res/drawable/cardviewsupportbackground.xml
+++ b/app/src/main/res/drawable/cardviewsupportbackground.xml
@@ -2,8 +2,9 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     android:shape="rectangle">
     <gradient
-        android:startColor="@color/cardviewone"
-        android:endColor="@color/cardviewtwo"
+        android:startColor="#27B500"
+        android:centerColor="#5ACF2F"
+        android:endColor="#8ABF55"
         android:angle="180">
     </gradient>
 
