--- a/app/src/main/res/layout/activity_donate.xml
+++ b/app/src/main/res/layout/activity_donate.xml
@@ -56,7 +56,7 @@
         app:layout_constraintTop_toBottomOf="@+id/tv_support" />
 
     <ImageButton
-        android:id="@+id/btn_back"
+        android:id="@+id/btn_donateback"
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:layout_marginStart="15dp"
