--- a/app/src/main/res/layout/activity_learn.xml
+++ b/app/src/main/res/layout/activity_learn.xml
@@ -1,134 +1,87 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".LearnActivity">
+    android:layout_height="match_parent">
 
-    <ImageView
-        android:id="@+id/im_redcrosscrescent"
-        android:layout_width="160dp"
-        android:layout_height="75dp"
-        android:layout_marginTop="25dp"
-        android:scaleType="fitCenter"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/climatecard"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/redcrosscrescent" />
-
-    <androidx.cardview.widget.CardView
-        android:id="@+id/climatecard"
-        android:layout_width="match_parent"
-        android:layout_height="150dp"
-        android:layout_marginStart="30dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="30dp"
-        android:outlineAmbientShadowColor="@color/red"
-        android:outlineSpotShadowColor="@color/red"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+    <ImageButton
+        android:id="@+id/btn_learnback"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_marginStart="15dp"
+        android:layout_marginBottom="15dp"
+        android:background="@color/red"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/im_redcrosscrescent">
-
-        <androidx.constraintlayout.widget.ConstraintLayout
-
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <TextView
-                android:id="@+id/tv_cardone_title"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="30dp"
-                android:text="Our Action Plan"
-                android:textColor="@color/black"
-                android:textSize="18sp"
-                android:textStyle="bold"
-                app:layout_constraintEnd_toStartOf="@+id/im_climate"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <ImageView
-                android:id="@+id/im_climate"
-                android:layout_width="180dp"
-                android:layout_height="150dp"
-                android:scaleType="fitXY"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@drawable/climateimage" />
-
-            <Button
-                android:id="@+id/btn_climate"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Visit"
-                app:cornerRadius="15dp"
-                android:textAllCaps="false"
-                android:textSize="12sp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toStartOf="@+id/im_climate"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/tv_cardone_title" />
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
-
-    </androidx.cardview.widget.CardView>
+        app:srcCompat="@drawable/ic_white_back" />
 
     <androidx.cardview.widget.CardView
         android:id="@+id/supportcard"
         android:layout_width="match_parent"
-        android:layout_height="150dp"
-        android:layout_marginStart="30dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="30dp"
-        android:outlineAmbientShadowColor="@color/red"
-        android:outlineSpotShadowColor="@color/red"
+        android:layout_height="190dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginEnd="10dp"
+        android:outlineAmbientShadowColor="#00FF22"
+        android:outlineSpotShadowColor="#77FF00"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/climatecard">
+        app:layout_constraintTop_toBottomOf="@+id/storiescard">
 
         <androidx.constraintlayout.widget.ConstraintLayout
 
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:background="@drawable/cardviewsupportbackground">
 
             <TextView
-                android:id="@+id/tv_cardtwo_title"
+                android:id="@+id/tv_cardthree_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="30dp"
-                android:text="Hear Our Stories"
-                android:textColor="@color/black"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="10dp"
+                android:text="Support Us"
+                android:textColor="@color/white"
                 android:textSize="18sp"
                 android:textStyle="bold"
-                app:layout_constraintEnd_toStartOf="@+id/im_stories"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toBottomOf="@+id/im_support" />
 
             <ImageView
-                android:id="@+id/im_stories"
-                android:layout_width="180dp"
-                android:layout_height="150dp"
+                android:id="@+id/im_support"
+                android:layout_width="390dp"
+                android:layout_height="130dp"
                 android:scaleType="fitXY"
-                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@drawable/storiesimage" />
+                app:srcCompat="@drawable/supportimage" />
 
-            <Button
-                android:id="@+id/btn_stories"
+            <TextView
+                android:id="@+id/tv_cvsupport"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Visit"
-                app:cornerRadius="15dp"
-                android:textAllCaps="false"
-                android:textSize="12sp"
+                android:layout_marginStart="10dp"
+                android:text="Humanity in action. And we're so grateful"
+                android:textColor="@color/white"
+                android:textSize="14sp"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toStartOf="@+id/im_stories"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/tv_cardtwo_title" />
+                app:layout_constraintTop_toBottomOf="@+id/tv_cardthree_title" />
+
+            <TextView
+                android:id="@+id/tv_cvlearn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="15dp"
+                android:text="LEARN MORE"
+                android:textColor="@color/white"
+                android:textSize="10sp"
+                app:layout_constraintBottom_toBottomOf="@+id/tv_cardthree_title"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="@+id/tv_cardthree_title" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -137,56 +90,135 @@
     <androidx.cardview.widget.CardView
         android:id="@+id/storiescard"
         android:layout_width="match_parent"
-        android:layout_height="150dp"
-        android:layout_marginStart="30dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="30dp"
-        android:outlineAmbientShadowColor="@color/red"
-        android:outlineSpotShadowColor="@color/red"
+        android:layout_height="190dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginEnd="10dp"
+        android:outlineAmbientShadowColor="#FF4800"
+        android:outlineSpotShadowColor="#FF3C00"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/supportcard">
+        app:layout_constraintTop_toBottomOf="@+id/climatecard">
 
         <androidx.constraintlayout.widget.ConstraintLayout
 
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:background="@drawable/cardviewstorybackground">
 
             <TextView
-                android:id="@+id/tv_cardthree_title"
+                android:id="@+id/tv_cardtwo_msg"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="30dp"
-                android:text="Support Us"
-                android:textColor="@color/black"
+                android:layout_marginStart="10dp"
+                android:text="The power of connecting with community and country"
+                android:textColor="@color/white"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/tv_cardtwo_title" />
+
+            <TextView
+                android:id="@+id/tv_cvlearn2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="10dp"
+                android:text="LEARN MORE"
+                android:textColor="@color/white"
+                android:textSize="10sp"
+                app:layout_constraintBottom_toBottomOf="@+id/tv_cardtwo_title"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="@+id/tv_cardtwo_title" />
+
+            <TextView
+                android:id="@+id/tv_cardtwo_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="10dp"
+                android:text="Hear Our Stories"
+                android:textColor="@color/white"
                 android:textSize="18sp"
                 android:textStyle="bold"
-                app:layout_constraintEnd_toStartOf="@+id/im_support"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toBottomOf="@+id/im_stories" />
 
             <ImageView
-                android:id="@+id/im_support"
-                android:layout_width="180dp"
-                android:layout_height="150dp"
+                android:id="@+id/im_stories"
+                android:layout_width="390dp"
+                android:layout_height="130dp"
                 android:scaleType="fitXY"
-                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@drawable/supportimage" />
+                app:srcCompat="@drawable/storiesimage" />
 
-            <Button
-                android:id="@+id/btn_support"
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </androidx.cardview.widget.CardView>
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/climatecard"
+        android:layout_width="match_parent"
+        android:layout_height="190dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginEnd="10dp"
+        android:outlineAmbientShadowColor="@color/red"
+        android:outlineSpotShadowColor="@color/red"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@drawable/cardviewclimatebackground">
+
+            <TextView
+                android:id="@+id/tv_cvlearn1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Visit"
-                app:cornerRadius="15dp"
-                android:textAllCaps="false"
-                android:textSize="12sp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toStartOf="@+id/im_support"
+                android:layout_marginEnd="10dp"
+                android:text="LEARN MORE"
+                android:textColor="@color/white"
+                android:textSize="10sp"
+                app:layout_constraintBottom_toBottomOf="@+id/tv_cardone_title"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="@+id/tv_cardone_title" />
+
+            <TextView
+                android:id="@+id/tv_cardone_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="10dp"
+                android:text="Our Action Plan"
+                android:textColor="@color/white"
+                android:textSize="18sp"
+                android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/tv_cardthree_title" />
+                app:layout_constraintTop_toBottomOf="@+id/im_climate" />
+
+            <ImageView
+                android:id="@+id/im_climate"
+                android:layout_width="390dp"
+                android:layout_height="130dp"
+                android:scaleType="fitXY"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:srcCompat="@drawable/climateimage" />
+
+            <TextView
+                android:id="@+id/tv_cardone_msg"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="It's time for a climate-ready conversation"
+                android:textColor="@color/white"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="@+id/tv_cardone_title"
+                app:layout_constraintTop_toBottomOf="@+id/tv_cardone_title" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
