--- a/app/src/main/res/layout/activity_learn.xml
+++ b/app/src/main/res/layout/activity_learn.xml
@@ -24,8 +24,8 @@
         android:layout_marginStart="10dp"
         android:layout_marginTop="15dp"
         android:layout_marginEnd="10dp"
-        android:outlineAmbientShadowColor="#00FF22"
-        android:outlineSpotShadowColor="#77FF00"
+        android:outlineAmbientShadowColor="@color/red"
+        android:outlineSpotShadowColor="@color/red"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/storiescard">
@@ -33,8 +33,7 @@
         <androidx.constraintlayout.widget.ConstraintLayout
 
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@drawable/cardviewsupportbackground">
+            android:layout_height="match_parent">
 
             <TextView
                 android:id="@+id/tv_cardthree_title"
@@ -43,7 +42,7 @@
                 android:layout_marginStart="10dp"
                 android:layout_marginTop="10dp"
                 android:text="Support Us"
-                android:textColor="@color/white"
+                android:textColor="@color/black"
                 android:textSize="18sp"
                 android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="parent"
@@ -65,7 +64,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
                 android:text="Humanity in action. And we're so grateful"
-                android:textColor="@color/white"
+                android:textColor="@color/black"
                 android:textSize="14sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -77,7 +76,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="15dp"
                 android:text="LEARN MORE"
-                android:textColor="@color/white"
+                android:textColor="@color/teal_200"
                 android:textSize="10sp"
                 app:layout_constraintBottom_toBottomOf="@+id/tv_cardthree_title"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -94,8 +93,8 @@
         android:layout_marginStart="10dp"
         android:layout_marginTop="15dp"
         android:layout_marginEnd="10dp"
-        android:outlineAmbientShadowColor="#FF4800"
-        android:outlineSpotShadowColor="#FF3C00"
+        android:outlineAmbientShadowColor="@color/red"
+        android:outlineSpotShadowColor="@color/red"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/climatecard">
@@ -103,8 +102,7 @@
         <androidx.constraintlayout.widget.ConstraintLayout
 
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@drawable/cardviewstorybackground">
+            android:layout_height="match_parent">
 
             <TextView
                 android:id="@+id/tv_cardtwo_msg"
@@ -112,7 +110,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
                 android:text="The power of connecting with community and country"
-                android:textColor="@color/white"
+                android:textColor="@color/black"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/tv_cardtwo_title" />
@@ -123,7 +121,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="10dp"
                 android:text="LEARN MORE"
-                android:textColor="@color/white"
+                android:textColor="@color/teal_200"
                 android:textSize="10sp"
                 app:layout_constraintBottom_toBottomOf="@+id/tv_cardtwo_title"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -136,7 +134,7 @@
                 android:layout_marginStart="10dp"
                 android:layout_marginTop="10dp"
                 android:text="Hear Our Stories"
-                android:textColor="@color/white"
+                android:textColor="@color/black"
                 android:textSize="18sp"
                 android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="parent"
@@ -173,8 +171,7 @@
         <androidx.constraintlayout.widget.ConstraintLayout
 
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@drawable/cardviewclimatebackground">
+            android:layout_height="match_parent">
 
             <TextView
                 android:id="@+id/tv_cvlearn1"
@@ -182,7 +179,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="10dp"
                 android:text="LEARN MORE"
-                android:textColor="@color/white"
+                android:textColor="@color/teal_200"
                 android:textSize="10sp"
                 app:layout_constraintBottom_toBottomOf="@+id/tv_cardone_title"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -195,7 +192,7 @@
                 android:layout_marginStart="10dp"
                 android:layout_marginTop="10dp"
                 android:text="Our Action Plan"
-                android:textColor="@color/white"
+                android:textColor="@color/black"
                 android:textSize="18sp"
                 android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="parent"
@@ -215,7 +212,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="It's time for a climate-ready conversation"
-                android:textColor="@color/white"
+                android:textColor="@color/black"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="@+id/tv_cardone_title"
                 app:layout_constraintTop_toBottomOf="@+id/tv_cardone_title" />
