--- a/app/src/main/res/layout/activity_learn.xml
+++ b/app/src/main/res/layout/activity_learn.xml
@@ -174,19 +174,19 @@
             android:layout_height="match_parent">
 
             <TextView
-                android:id="@+id/tv_cvlearn1"
+                android:id="@+id/cv_moreMessage"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="10dp"
                 android:text="LEARN MORE"
                 android:textColor="@color/teal_200"
                 android:textSize="10sp"
-                app:layout_constraintBottom_toBottomOf="@+id/tv_cardone_title"
+                app:layout_constraintBottom_toBottomOf="@+id/cv_title"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="@+id/tv_cardone_title" />
+                app:layout_constraintTop_toTopOf="@+id/cv_title" />
 
             <TextView
-                android:id="@+id/tv_cardone_title"
+                android:id="@+id/cv_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
@@ -196,10 +196,10 @@
                 android:textSize="18sp"
                 android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/im_climate" />
+                app:layout_constraintTop_toBottomOf="@+id/cv_image" />
 
             <ImageView
-                android:id="@+id/im_climate"
+                android:id="@+id/cv_image"
                 android:layout_width="390dp"
                 android:layout_height="130dp"
                 android:scaleType="fitXY"
@@ -208,14 +208,14 @@
                 app:srcCompat="@drawable/climateimage" />
 
             <TextView
-                android:id="@+id/tv_cardone_msg"
+                android:id="@+id/cv_message"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="It's time for a climate-ready conversation"
                 android:textColor="@color/black"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toStartOf="@+id/tv_cardone_title"
-                app:layout_constraintTop_toBottomOf="@+id/tv_cardone_title" />
+                app:layout_constraintStart_toStartOf="@+id/cv_title"
+                app:layout_constraintTop_toBottomOf="@+id/cv_title" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
