Tahmin - Cardview Color Change

--- a/app/src/main/res/layout/cardview_list_row.xml
+++ b/app/src/main/res/layout/cardview_list_row.xml
@@ -12,8 +12,6 @@
         android:layout_marginTop="15dp"
         android:layout_marginEnd="10dp"
         android:layout_marginBottom="15dp"
-        android:outlineAmbientShadowColor="@color/red"
-        android:outlineSpotShadowColor="@color/red"
         app:cardCornerRadius="30dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -24,7 +22,8 @@
         <androidx.constraintlayout.widget.ConstraintLayout
 
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:background="@color/grey">
 
             <TextView
                 android:id="@+id/cv_moreMessage"
