Tahmin - Small UI Change to textviews

--- a/app/src/main/res/layout/popup_add_post.xml
+++ b/app/src/main/res/layout/popup_add_post.xml
@@ -35,9 +35,9 @@
         android:layout_marginTop="20dp"
         android:background="@drawable/postscreentextviews"
         android:ems="10"
+        android:hint="Insert Title"
         android:inputType="textPersonName"
         android:padding="5dp"
-        android:text="Insert Title"
         android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -50,9 +50,9 @@
         android:layout_marginTop="10dp"
         android:background="@drawable/postscreentextviews"
         android:ems="10"
+        android:hint="Insert Location"
         android:inputType="textPersonName"
         android:padding="5dp"
-        android:text="Insert Location"
         android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.52"
@@ -67,9 +67,9 @@
         android:background="@drawable/postscreentextviews"
         android:ems="10"
         android:gravity="top"
+        android:hint="Insert Description"
         android:inputType="textPersonName"
         android:padding="5dp"
-        android:text="Insert Description"
         android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.52"
