--- a/app/src/main/res/layout/activity_updated_learn.xml
+++ b/app/src/main/res/layout/activity_updated_learn.xml
@@ -65,4 +65,27 @@
         app:layout_constraintStart_toStartOf="@+id/tv_discover"
         app:layout_constraintTop_toBottomOf="@+id/tv_discover" />
 
+    <androidx.coordinatorlayout.widget.CoordinatorLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <RelativeLayout
+            android:id="@+id/bottom_bar"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_gravity="bottom">
+
+            <com.google.android.material.bottomnavigation.BottomNavigationView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:id="@+id/bottom_nav_bar"
+                android:background="@drawable/bottom_nav"
+                app:menu="@menu/bottom_nav_menu">
+
+            </com.google.android.material.bottomnavigation.BottomNavigationView>
+
+        </RelativeLayout>
+
+    </androidx.coordinatorlayout.widget.CoordinatorLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
