--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item
+<!--    <item
         android:id="@+id/ic_home"
         android:icon="@drawable/ic_home"
-        android:title="Home"></item>
+        android:title="Home"></item>-->
 
     <item
         android:id="@+id/ic_learn"
